- fixed call accept/reject/hangup missing icons - fixed Request Sent modal background overlapping toolbar - fixed first chat bubble upper padding - fixed profile image holder not updating on initial account setup - fixed password input on windows issue - fixed initial account setup password fields - fixed nickname not reset after Deleting Account in active Spixi instance

--- a/Spixi/Resources/Raw/html/css/spixiui-dark.css
+++ b/Spixi/Resources/Raw/html/css/spixiui-dark.css
@@ -832,7 +832,7 @@ img.emoji {
     position: fixed;
     z-index: 101;
     font-size: 16pt;
-    background-color: #443d54;
+    background-color: #345279;
     color: #FFFFFF;
     padding-top: 3px;
     font-size: 12pt;
@@ -855,7 +855,7 @@ img.emoji {
     height: 2px;
 
     margin: 20px auto 10px auto;
-    background-color: #5b5569;
+    background-color: #888;
 }
 
 .spixi-callbar-actions
@@ -1811,6 +1811,7 @@ img.emoji {
     background-image: url('../img/pattern_dark.svg');
     background-repeat: repeat;
     background-size: 324px 509px;
+    padding-top: 10px;
 }
 
 .scrollable-div {
@@ -2873,7 +2874,7 @@ img.emoji {
 .spixi-modal-soft {
     display: none; /* Hidden by default */
     position: fixed; /* Stay in place */
-    z-index: 9001;
+    z-index: 99;
     left: 0;
     top: 0;
     width: 100%; /* Full width */
